syntax = "proto3";
import "proto/v1/messages.proto";

package proto.v1;
option go_package = "proto.v1";

message StartSynchronizationRequest {
  repeated FileSyncInfo files = 1;
}

message FinishSynchronizationRequest {}

message UploadFileRequest {
  string path = 1;
  uint64 index = 2;
  uint64 length = 3;
  bytes data = 4;
  uint64 total_parts = 5;
  uint64 total_length = 6;
}

message DownloadFileRequest {
  string path = 1;
}